# Savo_Pi

./: .gitignore  LICENSE  README.md
savo_ws/src/core/savo_base/: CMakeLists.txt  package.xml  setup.cfg  setup.py
savo_ws/src/core/savo_base/config/: base_driver.yaml  mecanum_kinematics.yaml  motor_board_freenove.yaml  safety_timeouts.yaml
savo_ws/src/core/savo_base/launch/: base_bringup.launch.py  base_diag_board.launch.py  base_diag_wheels.launch.py  base_dryrun_test.launch.py  base_hw_only.launch.py  base_safe_idle.launch.py  base_teleop_test.launch.py
savo_ws/src/core/savo_control/: .flake8  CMakeLists.txt  package.xml  setup.cfg  setup.py
savo_ws/src/core/savo_head/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
savo_ws/src/core/savo_lidar/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
savo_ws/src/core/savo_localization/: .flake8  CMakeLists.txt  package.xml  setup.cfg  setup.py
savo_ws/src/savo_base/: package.xml
savo_ws/src/savo_base/config/: base_driver.yaml  diagnostics.yaml  mecanum_kinematics.yaml  motor_board_freenove.yaml  safety_timeouts.yaml  topics.yaml
savo_ws/src/savo_base/launch/: base_bringup.launch.py  base_diag_board.launch.py  base_dryrun_test.launch.py  base_hw_only.launch.py  base_safe_idle.launch.py
savo_ws/src/savo_base/savo_base/: version.py
savo_ws/src/savo_base/scripts/: base_smoke_test_cli.py  dump_effective_params.py
savo_ws/src/savo_base/test/: test_driver_dryrun.py  test_wheel_command.py
savo_ws/src/savo_bringup/: package.xml
savo_ws/src/savo_control/: CMakeLists.txt  package.xml  setup.cfg  setup.py
savo_ws/src/savo_control/config/: auto_test_modes.yaml  cmd_vel_shaper.yaml  control_common.yaml  distance_approach.yaml  heading_pid.yaml  recovery.yaml  rotate_to_heading.yaml  stuck_detector.yaml  topic_remaps_example.yaml  twist_mux.yaml
savo_ws/src/savo_control/launch/: auto_test_control.launch.py  control_bringup.launch.py  heading_pid_test.launch.py  recovery_test.launch.py  rotate_test.launch.py  teleop_control.launch.py
savo_ws/src/savo_control/test/: test_angle_wrap.py  test_command_limiter.py  test_pid_math.py
savo_ws/src/savo_localization/: README.md  package.xml
savo_ws/src/savo_localization/config/: encoders.yaml  imu.yaml
savo_ws/src/savo_locations/: package.xml
savo_ws/src/savo_nav/: nav2_interface_node.py  package.xml
savo_ws/src/savo_perception/: CMakeLists.txt
src/savo_base/: CMakeLists.txt  setup.cfg  setup.py
src/savo_base/config/: base_driver.yaml
src/savo_base/config/profiles/: bench_test.yaml  real_robot_v1.yaml
src/savo_base/launch/: base_bringup.launch.py  base_diag_wheels.launch.py  base_dryrun_test.launch.py  base_hw_only.launch.py  base_safe_idle.launch.py  base_teleop_test.launch.py
src/savo_base/savo_base/: __init__.py  constants.py  version.py
src/savo_base/savo_base/diagnostics/: __init__.py  wheel_direction_check.py
src/savo_base/savo_base/drivers/: __init__.py  board_exceptions.py  board_factory.py
src/savo_base/savo_base/kinematics/: conventions.py  scaling.py
src/savo_base/savo_base/models/: __init__.py  base_limits.py  motor_board_status.py  watchdog_state.py
src/savo_base/savo_base/nodes/: base_diag_runner_node.py  base_driver_node.py  base_heartbeat_node.py  base_watchdog_node.py
src/savo_base/savo_base/ros/: adapters.py  params.py  qos_profiles.py  topic_contract.py
src/savo_base/savo_base/safety/: __init__.py  stale_command_policy.py
src/savo_base/savo_base/utils/: __init__.py  clamp.py  qos.py  ratekeeper.py  topic_names.py
src/savo_base/scripts/: poke_test_cli.py  teleop_letters_cli.py
src/savo_base/test/: test_mecanum_mix.py
src/savo_head/: package.xml  setup.py
src/savo_intent/: intent_client_node.py  package.xml  setup.cfg  setup.py
src/savo_intent/savo_intent/: intent_client_node.py
src/savo_localization/: CMakeLists.txt  setup.cfg  setup.py
src/savo_localization/config/: ekf_odom.yaml  frames.yaml  localization_common.yaml
src/savo_localization/docs/: sign_conventions.md
src/savo_localization/include/savo_localization/: wheel_odom.hpp
src/savo_localization/launch/: localization_bringup.launch.py
src/savo_localization/savo_localization/nodes/: imu_node.py  localization_dashboard.py
src/savo_localization/savo_localization/utils/: frames.py  odom_math.py  utils_time.py
src/savo_localization/scripts/: wheel_odom_fallback_node
src/savo_localization/src/: wheel_odom_node.cpp
src/savo_msgs/: CMakeLists.txt  package.xml
src/savo_msgs/msg/: IntentResult.msg  NavState.msg  RobotStatus.msg
src/savo_perception/: CMakeLists.txt  package.xml  setup.py
src/savo_perception/config/: costmap_3d_layers.yaml  depth_front.yaml  range_safety.yaml
src/savo_perception/include/savo_perception/: safety_gate.hpp
src/savo_perception/launch/: perception_bringup.launch.py  safety_bringup.launch.py
src/savo_perception/savo_perception/: april_tag_node.py  person_follow_node.py
src/savo_perception/savo_perception/nodes/: depth_front_min_node.py  sensor_dashboard_node.py  vl53_node.py
src/savo_perception/savo_perception/sensors_api/: __init__.py  ultrasonic_api.py
src/savo_perception/src/: cmd_vel_safety_gate.cpp
src/savo_speech/: package.xml  setup.cfg  setup.py
src/savo_speech/config/: mouth_anim.yaml  speech_remote.yaml  stt_whisper.yaml  tts_piper.yaml
src/savo_speech/launch/: speech_bringup.launch.py  speech_bringup_v2.launch.py  stt_only.launch.py  stt_remote_only.launch.py  tts_only.launch.py
src/savo_speech/savo_speech/: audio_io.py  mouth_anim.py  piper_engine.py  remote_speech_client_node.py  remote_stt_client_node.py  stt_node.py  tts_node.py  whisper_engine.py
src/savo_ui/: CMakeLists.txt  package.xml  setuo.cfg  setup.cfg  setup.py
src/savo_ui/config/: ui_display.yaml  ui_params.yaml
src/savo_ui/launch/: savo_ui_bringup.launch.py
src/savo_ui/savo_ui/: __init__.py  display_manager_node.py  face_view.py  fake_cam_node.py  nav_cam_view.py  real_cam_node.py  ui_debug_node.py  ui_mode_router_node.py
src/savo_ui/scripts/: test_face.sh
(+1677 files in other folders)
