<?xml version="1.0"?>
<package format="3">
  <name>savo_head</name>
  <version>0.0.1</version>
  <description>Pan/tilt head control for camera/mic array</description>
  <maintainer email="todo@example.com">TODO_NAME</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
</package>
