<?xml version="1.0"?>
<package format="3">
  <name>savo_intent</name>
  <version>0.0.1</version>
  <description>Robot Savo — ROS2 bridge between the robot and the LLM server. (Maintainer: Ahnaf Tahmid)</description>

  <maintainer email="tahmidahnaf998@gmail.com">Ahnaf Tahmid</maintainer>
  <license>Proprietary</license>

  <!-- We use ament_python because this is a Python-based ROS2 package -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Core runtime dependency: rclpy for ROS2 Python nodes -->
  <exec_depend>rclpy</exec_depend>

  <!-- Optional: common lint/test tools (we can use later if we want) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <!-- Tells colcon this package is built using ament_python -->
    <build_type>ament_python</build_type>
  </export>
</package>
