<?xml version="1.0"?>
<package format="3">
  <name>savo_intent</name>
  <version>0.0.1</version>
  <description>
    Robot Savo — ROS 2 bridge between the robot and the LLM server.
    (Maintainer: Ahnaf Tahmid)
  </description>

  <!-- Project metadata -->
  <maintainer email="tahmidahnaf998@gmail.com">Ahnaf Tahmid</maintainer>
  <license>Proprietary</license>

  <!-- Build system: Python-based ROS 2 package -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Core runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>savo_msgs</exec_depend>

  <!-- Optional: lint/test tools (can be enabled later) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <!-- Tells colcon this package is built using ament_python -->
    <build_type>ament_python</build_type>
  </export>
</package>
