<?xml version="1.0"?>
<package format="3">
  <name>savo_msgs</name>
  <version>0.0.1</version>
  <description>Custom interface messages for Robot Savo</description>
  <maintainer email="todo@example.com">TODO_NAME</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rosidl_default_generators</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
</package>
