<?xml version="1.0"?>
<package format="3">
  <name>savo_msgs</name>
  <version>0.0.1</version>
  <description>
    Robot Savo — custom ROS 2 message definitions for navigation, robot status,
    and LLM intent results.
  </description>

  <!-- Project metadata -->
  <maintainer email="tahmidahnaf998@gmail.com">Ahnaf Tahmid</maintainer>
  <license>Proprietary</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Interface generation:
       - rosidl_default_generators: used in CMakeLists.txt for msg generation
       - rosidl_default_runtime: runtime support for generated types -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Message dependencies used inside our .msg files -->
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
    <!-- Standard build type for this package -->
    <build_type>ament_cmake</build_type>

    <!-- REQUIRED for packages that install .msg/.srv/.action interfaces -->
    <member_of_group>rosidl_interface_packages</member_of_group>
  </export>
</package>
