[metadata]
name = savo_speech
version = 0.1.0
description = Robot Savo speech stack: faster-whisper STT, Piper TTS, and mouth animation.
long_description = file: README.md
long_description_content_type = text/markdown
author = Ahnaf Tahmid
author_email = tahmidahnaf998@gmail.com
license = Proprietary
license_files = LICENSE
url = https://github.com/ahnaftahmid/robot-savo
classifiers =
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
install_requires =
    rclpy
    std_msgs
    numpy
    sounddevice
    piper-tts
    faster-whisper
python_requires = >=3.10
zip_safe = False

[options.packages.find]
exclude =
    test
    tests

[options.entry_points]
console_scripts =
    tts_node = savo_speech.tts_node:main
    stt_node = savo_speech.stt_node:main
    mouth_anim_node = savo_speech.mouth_anim_node:main

# ======================================================================
# Development install locations (ROS 2 / ament_python)
# ======================================================================

[develop]
script_dir = $base/lib/savo_speech

[install]
install_scripts = $base/lib/savo_speech

# ======================================================================
# Linting / style
# ======================================================================

[flake8]
max-line-length = 100
extend-ignore =
    E203,  # whitespace before ':', conflicts with black style
    W503,  # line break before binary operator
exclude =
    .git,
    __pycache__,
    build,
    dist

# You can also ignore specific error codes per-file if needed:
# per-file-ignores =
#     savo_speech/__init__.py:F401

# ======================================================================
# Pytest configuration
# ======================================================================

[tool:pytest]
testpaths =
    test
    tests
addopts =
    -ra
    -q
python_files =
    test_*.py
    *_test.py
