[metadata]
name = savo_speech
version = 0.1.0
description = Robot Savo speech stack: faster-whisper STT, Piper TTS, and mouth animation integration for the on-robot UI.
long_description = Robot Savo speech stack for speech-to-text, text-to-speech, and mouth animation.
long_description_content_type = text/plain
author = Ahnaf Tahmid
author_email = tahmidahnaf998@gmail.com
license = Proprietary
url = https://github.com/AhnafTahmid98/Savo_Pi.git
classifiers =
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
# For pip installs these would be nice, but colcon doesn't care much.
# We still keep them for completeness.
install_requires =
    rclpy
    std_msgs
    numpy
    sounddevice
    piper-tts
    faster-whisper
zip_safe = False

[options.packages.find]
exclude =
    test
    tests

[options.entry_points]
console_scripts =
    # Text-to-speech node (Piper)
    tts_node = savo_speech.tts_node:main

    # Speech-to-text node (Faster-Whisper)
    stt_node = savo_speech.stt_node:main

    # NEW: Bridge between STT ↔ LLM ↔ TTS
    speech_bridge_node = savo_speech.speech_bridge_node:main

    # Mouth / face animation node for DSI UI
    mouth_anim_node = savo_speech.mouth_anim_node:main

# ======================================================================
# Development install locations (ROS 2 / ament_python)
# ======================================================================

[develop]
script_dir = $base/lib/savo_speech

[install]
install_scripts = $base/lib/savo_speech

# ======================================================================
# Linting / style
# ======================================================================

[flake8]
max-line-length = 100
extend-ignore =
    E203,  # whitespace before ':', conflicts with black style
    W503,  # line break before binary operator
exclude =
    .git,
    __pycache__,
    build,
    dist

# ======================================================================
# Pytest configuration
# ======================================================================

[tool:pytest]
testpaths =
    test
    tests
addopts =
    -ra
    -q
python_files =
    test_*.py
    *_test.py
